tests/snapshots/integration__integration_tests__switch__switch_execute_success.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - exec-test
    - "--execute"
    - "echo 'test output'"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1mexec-test[0m
  [2mPath: [REPO]/../test-repo.exec-test[0m[0m
test output

----- stderr -----
