tests/snapshots/integration__integration_tests__switch__switch_internal_with_execute.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - "--internal"
    - switch
    - "--create"
    - exec-internal
    - "--execute"
    - "echo 'line1'\necho 'line2'"
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----
cd '[REPO].exec-internal'
echo 'line1'
echo 'line2'

----- stderr -----
✅ [32m[32mCreated new worktree for [1mexec-internal[22m from [1mmain[22m @ [1m[REPO].exec-internal[39m[22m[39m
🔄 [36mExecuting (--execute):[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'line1'[0m[2m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'line2'[0m[2m
